fix text align

--- a/static/app.css
+++ b/static/app.css
@@ -15,8 +15,6 @@ button, textarea {
     font-size: 20px;
 }
 
-
-
 nav {
     margin-bottom: 16px;
 }
@@ -129,7 +127,6 @@ img {
     border-radius: 5px;
     margin-top: 20px;
     border-top: 6px solid;
-    text-align: justify;
     box-shadow: 0 4em 6em -2em rgb(0 0 0 / 50%), 1em 2em 3.5em -2.5em rgb(0 0 0 / 50%);
 }
 
@@ -139,8 +136,6 @@ img {
     font-weight: 300;
     font-size: 20px;
     line-height: 2rem;
-    text-align: justify;
-    /*text-align: justify;*/
     margin-bottom: 1em;
 }
 
